--- a/readthedocsext/theme/templates/account/saml.html
+++ b/readthedocsext/theme/templates/account/saml.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}
   {% trans "Sign in with SAML" %}
-{% endblock %}
+{% endblock head_title %}
 
 {% block content %}
   <h1>{% trans "Continue with SAML single sign-on" %}</h1>
