--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -49,11 +49,14 @@
           {% endblock authentication_email_text %}
         </a>
 
+
+        {% if USE_ORGANIZATIONS %}
         <a class="item"
            href="{% url "saml_resolve_login" %}{% if redirect_field_value %}?{{ redirect_field_name }}={{ redirect_field_value }}{% endif %}">
           <i class="fas fa-shield-alt icon"></i>
           {% trans "Single sign-on" %}
         </a>
+        {% endif %}
 
         {% if project_password_url %}
           <a class="item" href="{{ project_password_url }}">
