Add notifications block to AllAuth templates
The allauth templates are overwriting the base templates block:

* https://github.com/readthedocs/ext-theme/blob/main/readthedocsext/theme/templates/allauth/layouts/base.html#L3 is overriding
* https://github.com/readthedocs/ext-theme/blob/main/readthedocsext/theme/templates/base.html#L63

--- a/readthedocsext/theme/templates/allauth/layouts/base.html
+++ b/readthedocsext/theme/templates/allauth/layouts/base.html
@@ -2,6 +2,11 @@
 
 {% block content-wrapper %}
   <div class="ui very padded container">
+
+    {% block notifications %}
+      {% include "includes/utils/messages.html" %}
+    {% endblock notifications %}
+
     <div class="ui centered grid">
       <div class="nine wide computer twelve wide tablet sixteen wide mobile column">
         <div class="ui raised segment">
