Add notifications block to AllAuth templates (#424)
* Add notifications block to AllAuth templates

The allauth templates are overwriting the base templates block:

* https://github.com/readthedocs/ext-theme/blob/main/readthedocsext/theme/templates/allauth/layouts/base.html#L3 is overriding
* https://github.com/readthedocs/ext-theme/blob/main/readthedocsext/theme/templates/base.html#L63

* Add comment

* Fix comment

* Update readthedocsext/theme/templates/allauth/layouts/base.html

Co-authored-by: Anthony <aj@ohess.org>

---------

Co-authored-by: Anthony <aj@ohess.org>

--- a/readthedocsext/theme/templates/allauth/layouts/base.html
+++ b/readthedocsext/theme/templates/allauth/layouts/base.html
@@ -2,6 +2,13 @@
 
 {% block content-wrapper %}
   <div class="ui very padded container">
+
+    {# This is overriding the normal base.html content-wrapper, #}
+    {# so we need to include notifications here so they're displayed. #}
+    {% block notifications %}
+      {{ block.super }}
+    {% endblock notifications %}
+
     <div class="ui centered grid">
       <div class="nine wide computer twelve wide tablet sixteen wide mobile column">
         <div class="ui raised segment">
