--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -17,7 +17,7 @@
         <a class="item {% block project_addons_active %}{% endblock %}" href="{% url "projects_addons" project.slug %}">
           {% trans "Addons" %}
           <div class="ui basic primary label">
-            {% trans "Beta" %}
+            {% trans "New" %}
           </div>
         </a>
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
