--- a/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
@@ -70,8 +70,9 @@
   {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url action_text=action_text context_text=context_text %}
 {% endblock list_item_right_buttons %}
 
-{% block list_item_image %}
-{% endblock list_item_image %}
+{% block list_item_icon %}
+    <i class="fa-duotone fa-robot icon"></i>
+{% endblock list_item_icon %}
 
 {% block list_item_header %}
   <a href="{{ object.get_edit_url }}">
