--- a/readthedocsext/theme/templates/projects/import_base.html
+++ b/readthedocsext/theme/templates/projects/import_base.html
@@ -3,11 +3,15 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Add project" %}{% endblock %}
+{% block title %}
+  {% trans "Add project" %}
+{% endblock title %}
 
 {% block content %}
   {% block project_add_grid %}
-    <div class="ui very padded centered stackable grid" {% block project_add_data_bind %}{% endblock %}>
+    <div class="ui very padded centered stackable grid"
+         {% block project_add_data_bind %}
+         {% endblock project_add_data_bind %}>
 
       {% block project_add_header %}
         <div class="ui five wide computer four wide large screen computer only column">
@@ -62,7 +66,9 @@
 
         <div class="ui sixteen wide tablet eleven wide computer ten wide large screen column">
           {% block project_add_content_form %}
-            <form class="ui form" action="{% url "projects_import_manual" %}" method="post">
+            <form class="ui form"
+                  action="{% url "projects_import_manual" %}"
+                  method="post">
 
               {% block wizard_form %}
                 {% if wizard.form.forms %}
@@ -82,9 +88,9 @@
               {% block wizard_actions %}
                 <div>
                   {% if wizard.steps.prev %}
-                    <button class="ui button" name="wizard_goto_step" value="{{ wizard.steps.prev }}">
-                      {% trans "Previous" %}
-                    </button>
+                    <button class="ui button"
+                            name="wizard_goto_step"
+                            value="{{ wizard.steps.prev }}">{% trans "Previous" %}</button>
                   {% endif %}
 
                   {% if wizard.steps.next %}
@@ -101,4 +107,4 @@
       {% endblock project_add_content %}
     </div>
   {% endblock project_add_grid %}
-{% endblock %}
+{% endblock content %}
