--- a/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/automation_rule_list.html
@@ -69,7 +69,7 @@
 
   <a class="ui button"
      href="{% url 'projects_automation_rule_regex_edit' project_slug=project.slug automation_rule_pk=object.pk %}"
-     data-content="{% trans "Edit redirect" %}">
+     data-content="{% trans "Edit rule" %}">
     <i class="fas fa-wrench icon"></i>
   </a>
 
