Copy for the message
Explain a little more what's expected in this step.
It doesn't change the structure of the page on purpose, just updates the message.

--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -10,7 +10,9 @@
 {% block project_add_content_form %}
   <div class="ui small info message">
     {% blocktrans trimmed %}
-      Save and commit the following example configuration to your repository root as <code>.readthedocs.yaml</code>.
+      Read the Docs <strong>requires a <code>.readthedocs.yaml</code> file at the root of the repository</strong> to build your project's documentation.
+      Open a pull request in your repository with this file using the following example for your documentation tool, commit, push and merge the changes.
+      Then, come back to this page and finish the process.
     {% endblocktrans %}
   </div>
 
