Standardize copy buttons
Closes #433

--- a/readthedocsext/theme/templates/organizations/settings/saml.html
+++ b/readthedocsext/theme/templates/organizations/settings/saml.html
@@ -27,7 +27,7 @@
 
         <div class="ui fluid action input">
           <input type="text" readonly id="rtd-saml-login-url" value="{{ rtd_saml_login_url }}" />
-          <button class="ui teal right icon button" data-clipboard-target="#rtd-saml-login-url">
+          <button class="ui right icon button" data-clipboard-target="#rtd-saml-login-url">
             <i class="fas fa-copy icon"></i>
           </button>
         </div>
@@ -43,7 +43,7 @@
 
         <div class="ui fluid action input">
           <input type="text" readonly id="rtd-saml-connect-url" value="{{ rtd_saml_connect_url }}" />
-          <button class="ui teal right icon button" data-clipboard-target="#rtd-saml-connect-url">
+          <button class="ui right icon button" data-clipboard-target="#rtd-saml-connect-url">
             <i class="fas fa-copy icon"></i>
           </button>
         </div>
@@ -67,8 +67,8 @@
         <label>{% trans "Single sign-on URL" %}</label>
         <div class="ui fluid action input">
           <input type="text" value="{{ rtd_saml_sso_url }}" id="saml-sso-url" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-sso-url">
-            <i class="fa-solid fa-copy icon"></i>
+          <button class="ui right icon button" data-clipboard-target="input#saml-sso-url">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
@@ -76,8 +76,8 @@
         <label>{% trans "Audience URI (SP entity ID)" %}</label>
         <div class="ui fluid action input">
           <input type="text" value="{{ rtd_saml_sp_url }}" id="saml-sp-url" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-sp-url">
-            <i class="fa-solid fa-copy icon"></i>
+          <button class="ui right icon button" data-clipboard-target="input#saml-sp-url">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
@@ -85,8 +85,8 @@
         <label>{% trans "Name ID format" %}</label>
         <div class="ui fluid action input">
           <input type="text" value="EmailAddress" id="saml-name-id-format" readonly=true>
-          <button class="ui teal right icon button" data-clipboard-target="input#saml-name-id-format">
-            <i class="fa-solid fa-copy icon"></i>
+          <button class="ui right icon button" data-clipboard-target="input#saml-name-id-format">
+            <i class="fas fa-copy icon"></i>
           </button>
         </div>
       </div>
