--- a/readthedocsext/theme/templates/projects/keys_detail.html
+++ b/readthedocsext/theme/templates/projects/keys_detail.html
@@ -24,7 +24,7 @@
       <label>{% trans "Fingerprint" %}</label>
       <div class="ui fluid action input">
         <input type="text" value="{{ corporateprofile.fingerprint }}" id="ssh-key-fingerprint" readonly=true>
-        <button class="ui teal right icon button" data-clipboard-target="input#ssh-key-fingerprint">
+        <button class="ui right icon button" data-clipboard-target="input#ssh-key-fingerprint">
           <i class="fa-solid fa-copy icon"></i>
         </button>
       </div>
@@ -33,7 +33,7 @@
       <label>{% trans "Public SSH key" %}</label>
       <div class="ui fluid action input">
         <input type="text" value="{{ corporateprofile.public_key }}" id="ssh-key-public" readonly=true>
-        <button class="ui teal right icon button" data-clipboard-target="input#ssh-key-public">
+        <button class="ui right icon button" data-clipboard-target="input#ssh-key-public">
           <i class="fa-solid fa-copy icon"></i>
         </button>
       </div>
