--- a/readthedocsext/theme/templates/projects/temporary_access_form.html
+++ b/readthedocsext/theme/templates/projects/temporary_access_form.html
@@ -48,8 +48,8 @@
         {% else %}
           <input type="text" value="{{ object.get_absolute_url }}" id="temp-access-data" readonly=true>
         {% endif %}
-        <button class="ui teal right icon button" data-clipboard-target="input#temp-access-data">
-          <i class="fa-solid fa-copy icon"></i>
+        <button class="ui right icon button" data-clipboard-target="input#temp-access-data">
+          <i class="fas fa-copy icon"></i>
         </button>
       </div>
     </div>
