--- a/readthedocsext/theme/templates/projects/keys_detail.html
+++ b/readthedocsext/theme/templates/projects/keys_detail.html
@@ -4,9 +4,7 @@
 
 {% block project_edit_content_subheader %}
   <div class="ui breadcrumb">
-    <a class="section" href="{% url "projects_keys" project.slug %}">
-      {% trans "SSH keys" %}
-    </a>
+    <a class="section" href="{% url "projects_keys" project.slug %}">{% trans "SSH keys" %}</a>
     <span class="divider">/</span>
     <div class="active section">
       {% if object %}
@@ -23,8 +21,12 @@
     <div class="field">
       <label>{% trans "Fingerprint" %}</label>
       <div class="ui fluid action input">
-        <input type="text" value="{{ corporateprofile.fingerprint }}" id="ssh-key-fingerprint" readonly=true>
-        <button class="ui right icon button" data-clipboard-target="input#ssh-key-fingerprint">
+        <input type="text"
+               value="{{ corporateprofile.fingerprint }}"
+               id="ssh-key-fingerprint"
+               readonly="true">
+        <button class="ui right icon button"
+                data-clipboard-target="input#ssh-key-fingerprint">
           <i class="fa-solid fa-copy icon"></i>
         </button>
       </div>
@@ -32,11 +34,15 @@
     <div class="field">
       <label>{% trans "Public SSH key" %}</label>
       <div class="ui fluid action input">
-        <input type="text" value="{{ corporateprofile.public_key }}" id="ssh-key-public" readonly=true>
-        <button class="ui right icon button" data-clipboard-target="input#ssh-key-public">
+        <input type="text"
+               value="{{ corporateprofile.public_key }}"
+               id="ssh-key-public"
+               readonly="true">
+        <button class="ui right icon button"
+                data-clipboard-target="input#ssh-key-public">
           <i class="fa-solid fa-copy icon"></i>
         </button>
       </div>
     </div>
   </div>
-{% endblock %}
+{% endblock project_edit_content %}
