--- a/readthedocsext/theme/templates/projects/temporary_access_form.html
+++ b/readthedocsext/theme/templates/projects/temporary_access_form.html
@@ -6,9 +6,8 @@
 
 {% block project_edit_content_subheader %}
   <div class="ui breadcrumb">
-    <a class="section" href="{% url "projects_temporary_access_list" project.slug %}">
-      {% trans "Shares" %}
-    </a>
+    <a class="section"
+       href="{% url "projects_temporary_access_list" project.slug %}">{% trans "Shares" %}</a>
     <span class="divider">/</span>
     <div class="active section">
       {% if object %}
@@ -44,18 +43,31 @@
 
       <div class="ui fluid action input">
         {% if object.access_type == "http_header_token" %}
-          <input class="" type="text" value="Authorization: Token {{ object.token }}" id="temp-access-data" readonly=true>
+          <input type="text"
+                 value="Authorization: Token {{ object.token }}"
+                 id="temp-access-data"
+                 readonly="true">
         {% else %}
-          <input type="text" value="{{ object.get_absolute_url }}" id="temp-access-data" readonly=true>
+          <input type="text"
+                 value="{{ object.get_absolute_url }}"
+                 id="temp-access-data"
+                 readonly="true">
         {% endif %}
-        <button class="ui right icon button" data-clipboard-target="input#temp-access-data">
+        <button class="ui right icon button"
+                data-clipboard-target="input#temp-access-data">
           <i class="fas fa-copy icon"></i>
         </button>
       </div>
     </div>
   {% endif %}
 
-  <form class="ui form" method="post" data-bind="using: ProjectTemporaryAccessView({'allow_all': {% if object.allow_all or not object.pk %}true{% else %}false{% endif %}})">
+  <form class="ui form" method="post" data-bind="using: ProjectTemporaryAccessView({'allow_all':
+    {% if object.allow_all or not object.pk %}
+      true
+    {% else %}
+      false
+    {% endif %}
+    })">
     {% csrf_token %}
 
     {# Manually reprodce the logic behind semantic-ui/uni_form.html as we need some wrapping elements. Don't do this if you don't have to. #}
@@ -64,13 +76,9 @@
 
       {% for field in form %}
         {% if field == form.password %}
-          <div class="field" data-bind="visible: show_password_field()">
-            {{ field|as_crispy_field }}
-          </div>
+          <div class="field" data-bind="visible: show_password_field()">{{ field|as_crispy_field }}</div>
         {% elif field == form.versions %}
-          <div class="field" data-bind="visible: show_versions_list()">
-            {{ field|as_crispy_field }}
-          </div>
+          <div class="field" data-bind="visible: show_versions_list()">{{ field|as_crispy_field }}</div>
         {% else %}
           {{ field|as_crispy_field }}
         {% endif %}
@@ -79,4 +87,4 @@
 
     <input class="ui primary button" type="submit" value="{% trans "Save" %}">
   </form>
-{% endblock %}
+{% endblock project_edit_content_subheader %}
